--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "eslint": "^8.56.0",
     "eslint-config-next": "15.1.6",
+    "lucide-react": "^0.476.0",
     "next": "15.1.6",
     "next-themes": "^0.2.1",
     "react": "19.0.0",
